--- a/About.css
+++ b/About.css
@@ -13,6 +13,13 @@ body{
     justify-content: center;
     background-color: #b7b7a4;
 }
+.slide-container
+{
+    max-width: 1120px;
+    width: 100%;
+    background-color: grey;
+    padding: 40px 0;
+}
 .slide-content{
     margin: 0 40px;
 }
@@ -27,6 +34,39 @@ body{
     flex-direction: column;
     align-items: center;
     padding: 10px 14px;  
+}
+.image-content
+{
+    position: relative;
+    row-gap: 5px;
+    padding: 25px 0;
+    
+}
+.overlay
+{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #6b705c;
+    border-radius: 25px 25px 0 25px;
+}
+.overlay::before,
+.overlay::after{
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: -40px;
+    height: 40px;
+    width: 40px;
+    background-color: #6b705c;
+}
+.overlay::after
+{
+    border-radius: 0 25px 0 0;
+    background-color: #fff;
+
 }
 .card-image
 {
@@ -59,3 +99,19 @@ body{
     text-align: center;
     color: #707070;
 }
+.button
+{
+    border: none;
+    font-size: 16px;
+    color: #fff;
+    padding: 8px 16px;
+    background-color: #6b705c;
+    border-radius: 6px;
+    margin: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.button:hover{
+    background: #7b806a;  
+}
+
