--- a/About.css
+++ b/About.css
@@ -1,5 +1,67 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins' , sans-serif;
+    scroll-behavior: smooth;
+}
+body
+{
+    min-height: 100vh;
+    overflow-x: hidden;
+    /*background: linear-gradient(#ead707,#ceb007, #cb9d06, #cd930a,#c76e07, #ac4505, #a40808);*/
+    /*background: linear-gradient(#F0F7F4, #99E1D9, #70ABAF, #705D56, #32292F);*/
+    /*background: linear-gradient(#d6cea5, #afa56f);*/
+}
+header
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 30 px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 10000;
+}
+header .logo
+{
+color: #46493b;
+font-weight: 700;
+text-decoration: none;
+font-size: 5em;
+text-transform: uppercase;
+letter-spacing: 2px;
+}
+header ul
+{
+ display: flex; 
+ justify-content: center;
+ align-items: center; 
+}
+header ul li
+{
+ list-style: none;
+ margin-left: 20px;
+}
+header ul li a
+{
+  text-decoration: none;
+  font-size: 1.3em;
+  font-weight: 400;
+  padding: 6px 15px;
+  color: #fff; 
+  border-radius: 20px;
+}
+header ul li a:hover,
+header ul li a.active
+{
+background: #fff;
+color: #705D56;
+}
 *{
     margin: 0;
     padding: 0;
@@ -17,14 +79,16 @@ body{
 {
     max-width: 1120px;
     width: 100%;
-    background-color: grey;
+    background-color: #46493b;
     padding: 40px 0;
 }
 .slide-content{
+    overflow: hidden;
     margin: 0 40px;
+    background-color: #46493b;
+    border-radius: 25px;
 }
 .card{
-    width: 320px;
     border-radius: 25px;
     background-color: #fff;
 }
@@ -114,4 +178,33 @@ body{
 .button:hover{
     background: #7b806a;  
 }
-
+.swiper-navBtn{
+    color: #707853;
+    transition: color 0.3s ease;
+}
+.swiper-navBtn:hover{
+    color: #383a2f;
+}
+.swiper-navBtn::before,
+.swiper-navBtn::after
+{
+    font-size: 40px;
+}
+.swiper-button-next
+{
+    right: 0;
+}
+.swiper-button-prev
+{
+    left: 0;
+}
+.swiper-pagination.bullet
+{
+    background-color: #707853; 
+    opacity: 1;
+}
+.swiper-pagination.bullet-active
+{
+    background-color: #383a2f; 
+    opacity: 1;
+}
