--- a/About.css
+++ b/About.css
@@ -26,6 +26,7 @@ header
     justify-content: space-between;
     align-items: center;
     z-index: 10000;
+    
 }
 header .logo
 {
@@ -38,13 +39,14 @@ letter-spacing: 2px;
 }
 header ul
 {
- display: static; 
+ display: inline; 
  justify-content: center;
  align-items: center; 
 }
 header ul li
 {
  list-style: none;
+ display: inline-block;
  margin-left: 20px;
 }
 header ul li a
@@ -55,6 +57,7 @@ header ul li a
   padding: 6px 15px;
   color: #fff; 
   border-radius: 20px;
+  width: auto;
 }
 header ul li a:hover,
 header ul li a.active
@@ -73,7 +76,8 @@ body{
     display: static;
     align-items: center;
     justify-content: center;
-    background-color: #b7b7a4;
+    
+    background-size: contain;
 }
 .slide-container
 {
@@ -148,20 +152,20 @@ body{
    width: 100%;
    object-fit: cover;
    border-radius: 50%;
-   border: 4px solid #6b705c;
+   border: 4px solid #ffffff;
 
 }
 .name
 {
     font-size: 20px;
     font-weight: 500;
-    color: #333;
+    color: #ffffff;
 }
 .description
 {
     font-size: 14px;
     text-align: center;
-    color: #3f179e;
+    color: #ffffff;
 }
 .button
 {
@@ -208,3 +212,39 @@ body{
     background-color: #3f179e; 
     opacity: 1;
 }
+.dropdown {
+    position: relative;
+    display: inline-block;
+
+    text-decoration: none;
+    font-size: 1.3em;
+    font-weight: 400;
+    padding: 6px 15px;
+    color: #fff; 
+    border-radius: 20px;
+
+  }
+  
+  .dropdown-content {
+    display: none;
+    color:blue;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+    
+    text-decoration: none;
+    font-size: 1.0em;
+    font-weight: 400;
+    padding: 6px 15px;
+    color: blue;
+
+    border-radius: 20px;
+
+  }
