--- a/style2.css
+++ b/style2.css
@@ -146,3 +146,39 @@ z-index: 9;
     font-size: 1.1em;
     color: #705D56;
 }
+.dropdown {
+    position: relative;
+    display: inline-block;
+
+    text-decoration: none;
+    font-size: 1.3em;
+    font-weight: 400;
+    padding: 6px 15px;
+    color: #fff; 
+    border-radius: 20px;
+
+  }
+  
+  .dropdown-content {
+    display: none;
+    color:blue;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+    
+    text-decoration: none;
+    font-size: 1.0em;
+    font-weight: 400;
+    padding: 6px 15px;
+    color: blue;
+
+    border-radius: 20px;
+
+  }
